# evidence-lens

./: .gitattributes  .gitignore  Makefile  README.md  go.work  go.work.sum  package-lock.json  package.json
embedder/: Dockerfile  Dockerfile.cpu  README.md  main.py  pyproject.cpu.toml  pyproject.toml
embedder/evidencelens/v1/: embedder_pb2_grpc.py  scorer_pb2_grpc.py
gateway/: Dockerfile  README.md  package.json
gateway/src/: README.md  app.module.ts  health.controller.ts  main.ts
gateway/src/admin/: admin.module.ts
gateway/src/cache/: cache.module.ts
gateway/src/document/: document.module.ts
gateway/src/facets/: facets.module.ts
gateway/src/internal/: clicks.module.ts
gateway/src/llm-proxy/: llm-proxy.module.ts
gateway/src/mcp-proxy/: mcp-proxy.module.ts
gateway/src/recalls/: recalls.module.ts
gateway/src/search/: search.service.ts
gateway/src/tool/: tool.controller.ts  tool.module.ts  tool.service.ts
gateway/src/turnstile/: turnstile.module.ts
gateway/src/ws/: ws.module.ts
index/: Dockerfile  README.md  go.mod  go.sum
ingest/: README.md  go.mod  go.sum
process/: Dockerfile  README.md  main.py  pyproject.toml
process/evidencelens/v1/: __init__.py  scorer_pb2.py
process/parsers/: __init__.py  chembl.py  clinvar.py  core.py  crossref.py  europepmc.py  fda.py  generic.py  hpo.py  nih_reporter.py  nsf.py  openalex.py  preprint.py  pubmed.py  semanticscholar.py  trials.py  unpaywall.py
process/tests/: test_pubmed_parser.py
process/utils/: author_payment_joiner.py  chunker.py  config.py  embedder_client.py  entity_linker.py  object_store.py  salience.py
scorer/: Dockerfile  README.md  bm25.py  fusion.py  http_server.py  main.py  pyproject.toml  recency.py  vector.py
scorer/scripts/: pull_clicks.py  shadow_deploy.py
(+71 files in other folders)
